Fix hero overflow bug

--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -23,7 +23,6 @@
 		height: 100%;
 		color: #fff;
 		display: flex;
-		flex-direction: column;
 		justify-content: center;
 		align-items: center;
 		padding: 0 1.5em;
